--- a/gradient-boosting/predict.ipynb
+++ b/gradient-boosting/predict.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "87b2916a-cb75-4141-8100-f2f7c9dcb611",
+   "id": "5d07b621-27e6-44f6-8a08-29ee1f9dacac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d4caa180-869f-497d-aa9d-100e5cbf4de3",
+   "id": "c87311ff-ffa6-4de8-b1b9-b5de5675cfdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "19e2b0f5-736a-43bc-ab3a-1e4f3065f051",
+   "id": "48777579-fec9-4857-95d4-ed5d2a8c1087",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +38,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "26c2a37d-53df-4b23-9a1e-83c469234c65",
+   "id": "f63f70bd-ed92-461d-bf5c-48257df16b68",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hp\\miniconda3\\envs\\my_env\\Lib\\site-packages\\sklearn\\utils\\validation.py:2749: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
+      "C:\\Users\\hp\\miniconda3\\envs\\my_env\\Lib\\site-packages\\sklearn\\utils\\validation.py:2749: UserWarning: X does not have valid feature names, but GradientBoostingClassifier was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ef688ca3-5842-4063-8863-b5b07dd7e445",
+   "id": "a8876add-3f5b-4bf2-ad80-f14062171cb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,15 +80,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "6252c769-7d57-40a6-9f8d-70b74dc91df0",
+   "execution_count": 6,
+   "id": "866e8f5d-f4b8-455e-b704-dbf47e0535af",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hp\\miniconda3\\envs\\my_env\\Lib\\site-packages\\sklearn\\utils\\validation.py:2749: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
+      "C:\\Users\\hp\\miniconda3\\envs\\my_env\\Lib\\site-packages\\sklearn\\utils\\validation.py:2749: UserWarning: X does not have valid feature names, but GradientBoostingClassifier was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -98,7 +98,7 @@
        "array([0])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,12 +108,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "25942786-5296-4d40-9a6f-c76c3c2ad0fa",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1d233a2-fdf9-4ef0-b946-b5409dfa7e9b",
    "metadata": {},
-   "source": [
-    "Model is not working properly, where it should predict 1 it is predicting 0, means patients with cancer are coming out clean which is not a good thing."
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
